--- a/code/impl/src/main/resources/hibernate.properties
+++ b/code/impl/src/main/resources/hibernate.properties
@@ -1,3 +1,3 @@
 
 #hibernate.hbm2ddl.auto=update
-hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
