--- a/code/server/src/main/resources/setup.properties
+++ b/code/server/src/main/resources/setup.properties
@@ -5,10 +5,10 @@
 #jdbc.username=sa
 #jdbc.password=
 
-jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
-jdbc.url=jdbc:oracle:thin:@localhost:1521:ITBA
-jdbc.username=agregoir
-jdbc.password=numero02
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/chatterbot?useSSL=false
+jdbc.username=chatterbot
+jdbc.password=chatterbot
 
 # ActiveMQ broker info
 
@@ -33,4 +33,4 @@ opennlp.tagger=/tmp/models/postag/SpanishPOS.bin.gz
 
 # Ubicacion del dispatcher
 
-chatterbot.dispatcherURL=http://localhost:8081/chatterbot-dispatcher/
+chatterbot.dispatcherURL=http://localhost:8080/chatterbot-dispatcher/
