--- a/code/web/src/main/resources/hibernate.properties
+++ b/code/web/src/main/resources/hibernate.properties
@@ -1,3 +1,2 @@
 hibernate.hbm2ddl.auto=update
-hibernate.dialect=org.hibernate.dialect.Oracle9Dialect
-#hibernate.dialect=org.hibernate.dialect.HSQLDialect
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
