--- a/code/web/src/main/resources/setup.properties
+++ b/code/web/src/main/resources/setup.properties
@@ -5,10 +5,10 @@
 #jdbc.username=sa
 #jdbc.password=
 
-jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
-jdbc.url=jdbc:oracle:thin:@localhost:1521:ITBA
-jdbc.username=agregoir
-jdbc.password=numero02
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/chatterbot?useSSL=false
+jdbc.username=chatterbot
+jdbc.password=chatterbot
 
 # Diccionarios de OpenNLP
 
@@ -19,5 +19,5 @@ opennlp.tagger=target/classes/models/postag/SpanishPOS.bin.gz
 
 # Ubicacion del dispatcher
 
-chatterbot.dispatcherURL=http://localhost:8081/chatterbot-dispatcher/
+chatterbot.dispatcherURL=http://localhost:8080/chatterbot-dispatcher/
 
